# ai-agents

./: README.md
ai_health_fitness_agent/: README.md
ai_health_fitness_agent/ai_health_fitness_agent/: helath_fitness_agent.py
common/: README.md  __init__.py  llm_config.py
common/llm_providers/: README.md  __init__.py  base.py  base_llm_provider.py  bedrock_provider.py  client.py  gemini_provider.py  ollama_provider.py  openai_provider.py
data_analyst/: README.md  pyproject.toml  run.py
data_analyst/data_analyst/: ai_data_analyst.py
environment_controlled_agent/: README.md  agent.py  app_ui.py  environment.py  main.py
finance_agent/: README.md  pyproject.toml  run.py
finance_agent/finance_agent/: finance_agent.py
fixed_automation_agent/: README.md  app_ui.py  automation.py  main.py
llm_enhanced_agent/: README.md  agent.py  app_ui.py  main.py  requirements.txt
memory_enhanced_agent/: README.md  agent.py  app_ui.py  main.py  memory.py
react_rag_agent/: README.md  agent.py  app_ui.py  knowledge_base.py  knowledge_base_manager.py  main.py  requirements.txt  tools.py
self_learning_agent/: README.md  agent.py  app_ui.py  game.py  main.py
self_reflecting_agent/: README.md  agent.py  app_ui.py  critique_mechanism.py  main.py  task_performer.py
tool_enhanced_agent/: README.md  agent.py  app_ui.py  main.py  tools.py
web-rearch-agent/: README.md  pyproject.toml  requirements.txt  run.py
web-rearch-agent/web_rearch_agent/: rearch_agent.py
